--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* .uiCardContent-root css-13rxckv-MuiCardContent-root{
+  padding:0px  0px 0px 0px !important;
+}
+
+.MuiCardContent-root{
+  padding: 0px 0px 0px 0px !important;
+} */
