--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@ code {
 .MuiCardContent-root{
   padding: 0px 0px 0px 0px !important;
 } */
+
+/* .MuiButtonBase-root{
+  padding: 8px 8px 8px 8px !important;
+} */
