--- a/src/components/style/footer.css
+++ b/src/components/style/footer.css
@@ -1,9 +1,29 @@
-.footerButton{
+.footer {
+    display: flex;
+    height: 100%;
+    padding: 0.5% 0;
+}
+.author {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    flex: 1;
+}
+.footer-icons {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
+.footer-button {
     height: 45px;
     padding: 0 !important;
+    flex-grow: unset !important;
 }
-.listItemIcon{
-    display: flex;
+.custom-border-radius{
+    border-radius: 10px !important;
+}
+.listItemIcon {
     justify-content: center;
     font-size: 19px;
 }
